--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,33 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>snappy.bio - Create Your Personal Link Page</title>
+  <meta name="title" content="snappy.bio - Create Your Personal Link Page" />
+  <meta name="description" content="Create a beautiful, personalized link page to showcase all your social media profiles, websites, and content in one place. Simple, fast, and customizable." />
+  <meta name="keywords" content="link in bio, social media links, personal website, link page, bio link, profile page" />
+  <meta name="author" content="snappy.bio" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://snappy.bio/" />
+  <meta property="og:title" content="snappy.bio - Create Your Personal Link Page" />
+  <meta property="og:description" content="Create a beautiful, personalized link page to showcase all your social media profiles, websites, and content in one place." />
+  <meta property="og:image" content="/coffee-removebg-preview.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://snappy.bio/" />
+  <meta property="twitter:title" content="snappy.bio - Create Your Personal Link Page" />
+  <meta property="twitter:description" content="Create a beautiful, personalized link page to showcase all your social media profiles, websites, and content in one place." />
+  <meta property="twitter:image" content="/coffee-removebg-preview.png" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/coffee-removebg-preview.png" />
+  <link rel="apple-touch-icon" href="/coffee-removebg-preview.png" />
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
