added zod validations

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <!-- Primary Meta Tags -->
@@ -18,18 +18,20 @@
   <meta property="og:url" content="https://snappy.bio/" />
   <meta property="og:title" content="snappy.bio - Create Your Personal Link Page" />
   <meta property="og:description" content="Create a beautiful, personalized link page to showcase all your social media profiles, websites, and content in one place." />
-  <meta property="og:image" content="/coffee-removebg-preview.png" />
+  <meta property="og:image" content="/favicon.png" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://snappy.bio/" />
   <meta property="twitter:title" content="snappy.bio - Create Your Personal Link Page" />
   <meta property="twitter:description" content="Create a beautiful, personalized link page to showcase all your social media profiles, websites, and content in one place." />
-  <meta property="twitter:image" content="/coffee-removebg-preview.png" />
+  <meta property="twitter:image" content="/favicon.png" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/coffee-removebg-preview.png" />
-  <link rel="apple-touch-icon" href="/coffee-removebg-preview.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
